rc/rc-calm/main/default/objects/blng__InvoiceLine__c/fields/Credit_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_GL_Account__c</fullName>
    <formula>blng__BillingGLTreatment__r.blng__CreditGLAccount__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit GL Account</label>
    <type>Text</type>
</CustomField>