rc/rc-calm/main/default/objects/blng__InvoiceLine__c/fields/Debit_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Debit_GL_Account__c</fullName>
    <formula>blng__BillingGLTreatment__r.blng__DebitGLAccount__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit GL Account</label>
    <type>Text</type>
</CustomField>