rc/rc-calm/main/default/objects/blng__InvoiceLine__c/fields/Reset__c.field-meta.xml
<CustomField>
    <fullName>Reset__c</fullName>
    <formula>blng__Invoice__r.blng__Account__r.Reset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reset</label>
    <type>Checkbox</type>
</CustomField>